	* Fix the key release values for non keystroke keys (Windows XP)

2011-11-29 Mike McCormack

	* Allow quitting before entering the glib version of the main loop

2011-12-02 Carsten Haitzler (The Rasterman)

        1.1.0 release
        
2011-12-02 Mike Blumenkrantz

        * Use mempools for allocations

2011-12-02 Term <term@twistedpath.org>

        * added ecore_x_randr_output_backlight_available()

2011-12-03 Vincent Torri

	* Fix the modifiers value (Windows XP)

2011-12-04 Mike Blumenkrantz

        * added ecore_timer_reset()

2011-12-05 Mike Blumenkrantz

        * added ecore_con_socks api

2011-12-07 Mike Blumenkrantz

        * Allow SSL certificates to be loaded for STARTTLS
        * Added functions to set/get the hostname used for SSL certificate verification
        * ecore_con_ssl_server_cafile_add() now accepts directories

2011-12-10 Mike Blumenkrantz

        * Fix case where SSL certificates would not be used
        * Added ECORE_CON_REMOTE_CORK for applying TCP_CORK to sends

2011-12-12 Carsten Haitzler (The Rasterman)

        * Fix bug where an animator that just keeps adding another
        animator keeps the animator handler in an infinite loop. Do
        the same as timers and mark them as "just added" to skip in
        this run of animators

2011-12-13  Doyun Kang

	* Add ability to get resource id of last x error in ecore_x.

2011-12-16 Carsten Haitzler (The Rasterman)

        * Clean up some ecore-evas-buffer code
        * Add Ecore-evas extn (external) plug and socket canvas wrappers
        allowing for any ecore-evas to contain an image object that is
        a "socket" for other processes to plug into with "plugs" and
        thus provide image content via a canvas remotely (from another
        process) as well as the socket process passing in events to the
        plug process to it can see key, mouse, multi etc. events.


2011-12-16 Mike Blumenkrantz

        * Fix possible 0 byte allocation in ecore-x