@@ -421,3 +421,7 @@
 2011-12-16 Mike Blumenkrantz
 
         * Fix possible 0 byte allocation in ecore-x
+
+2011-12-20 Carsten Haitzler (The Rasterman)
+
+        * Fix probable leak for g_static_mutex's on some architectures
